fix: active enrichment in overlap, show tooltip for overlap

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -76,3 +76,7 @@
   border: unset;
   opacity: 100%;
 }
+
+.#{$prefix}--overlap-active-pass-through {
+  pointer-events: none;
+}
